<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/title_home" android:id="@+id/mnHome"
        android:icon="@drawable/baseline_home_24"
        android:iconTint="@color/black"/>
    <item android:title="@string/title_shop" android:id="@+id/mnShop"
        android:icon="@drawable/baseline_manage_search_24"
        android:iconTint="@color/black"/>
    <item android:title="@string/title_favorite" android:id="@+id/mnFavorite"
        android:icon="@drawable/baseline_favorite_24"
        android:iconTint="@color/black"/>
    <item android:title="@string/title_cart" android:id="@+id/mnBag"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:iconTint="@color/black"/>
    <item android:title="@string/title_profile" android:id="@+id/mnProfile"
        android:icon="@drawable/baseline_account_circle_24"/>
</menu>