<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

    <EditText
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Search"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.0"
        app:tabGravity="fill"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/men" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/women" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kid" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="410dp"
        android:layout_height="200dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        android:src="@drawable/banner"/>

    <LinearLayout
        android:id="@+id/categoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/banner">

        <ImageView
            android:id="@+id/adidas"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/adidaslogo"
            app:layout_constraintTop_toBottomOf="@id/banner"/>
        <ImageView
            android:id="@+id/nike"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/nikelogo"
            app:layout_constraintTop_toBottomOf="@id/banner"/>
        <ImageView
            android:id="@+id/sketcher"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sketcherlogo"
            app:layout_constraintTop_toBottomOf="@id/banner"/>
        <ImageView
            android:id="@+id/newbalance"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/nblogo"
            app:layout_constraintTop_toBottomOf="@id/banner"/>
        <ImageView
            android:id="@+id/puma"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/pumalogo"
            app:layout_constraintTop_toBottomOf="@id/banner"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Titlepro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Giay adidas"
        app:layout_constraintTop_toBottomOf="@id/categoryLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Titlepro"/>

</androidx.constraintlayout.widget.ConstraintLayout>